--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -56,7 +56,7 @@
     transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+.countdownButton:not(:disable):hover {
     background: var(--blue-dark);
 }
 
@@ -65,7 +65,13 @@
     color     : var(--title)
 }
 
-.countdownButtonActive:hover {
+.countdownButtonActive:not(:disable):hover {
     background: var(--red);
     color     : var(--white)
+}
+
+.countdownButton:disabled {
+    background: var(--white);
+    color     : var(--text);
+    cursor    : not-allowed;
 }
